--- a/src/i18n/locales/uk/translation.json
+++ b/src/i18n/locales/uk/translation.json
@@ -4,13 +4,13 @@
   },
 
   "pages": {
-    "home": "АкваТрек",
-    "notFound": "Сторінку не знайдено",
-    "signin": "Увійти",
-    "signup": "Зареєструватися",
-    "tracker": "Твій Трекер",
-    "forgot": "Забув Пароль",
-    "renew": "Оновити Пароль",
+    "home": "Трекер води",
+    "notfound": "Сторінку не знайдено",
+    "signin": "Вхід",
+    "signup": "Реєстрація",
+    "tracker": "Твій трекер води",
+    "forgot": "Відновлення пароля",
+    "renew": "Оновлення пароля",
     "error": "Помилка"
   },
 
@@ -18,7 +18,19 @@
     "logo": "Акватрек"
   },
 
-  "homePage": {
-    "title": "Домашня Сторінка"
+  "homepage": {
+    "welcome": {
+      "text": "Записуйте щоденне споживання води та відстежуйте",
+      "title": "Трекер споживання води",
+      "tryBtn": "Спробувати",
+      "signInBtn": "Увійти"
+    },
+
+    "advantages": {
+      "customers": "Наші <1>щасливі</1> клієнти",
+      "habitDrive": "Сприяння звичкам",
+      "viewStatistic": "Переглянути статистику",
+      "personalSetting": "Налаштування особистого рейтингу"
+    }
   }
 }
