--- a/src/i18n/locales/uk/translation.json
+++ b/src/i18n/locales/uk/translation.json
@@ -6,8 +6,8 @@
   "pages": {
     "home": "Трекер води",
     "notfound": "Сторінку не знайдено",
-    "signin": "Вхід",
-    "signup": "Реєстрація",
+    "signIn": "Вхід",
+    "signUp": "Реєстрація",
     "tracker": "Твій трекер води",
     "forgot": "Відновлення пароля",
     "renew": "Оновлення пароля",
@@ -32,5 +32,26 @@
       "viewStatistic": "Переглянути статистику",
       "personalSetting": "Налаштування особистого рейтингу"
     }
+  },
+
+  "signIn": {
+    "title": "Вхід",
+    "account": "Не маєте акаунту?",
+    "signUp": "Реєстрація",
+    "email": "Електронна пошта",
+    "placeholderEmail": "Введіть електронну пошту",
+    "password": "Пароль",
+    "placeholderPassword": "Введіть пароль"
+  },
+
+  "signUp": {
+    "title": "Реєстрація",
+    "account": "Вже маєте акаунт?",
+    "signIn": "Вхід",
+    "email": "Електронна пошта",
+    "placeholderEmail": "Введіть електронну пошту",
+    "password": "Пароль",
+    "placeholderPassword": "Введіть пароль",
+    "placeholderRepeatPassword": "Повторіть пароль"
   }
 }
