Change translation logic to display counter
Change translation logic to display counter

Co-Authored-By: NataliiaSwan <148957684+NataliiaSwan@users.noreply.github.com>

--- a/src/i18n/locales/uk/translation.json
+++ b/src/i18n/locales/uk/translation.json
@@ -27,7 +27,7 @@
     },
 
     "advantages": {
-      "customers": "Наші <1>щасливі</1> клієнти",
+      "customers": "Наші <1>{{counter}}</1> щасливі клієнти",
       "habitDrive": "Сприяння звичкам",
       "viewStatistic": "Переглянути статистику",
       "personalSetting": "Налаштування особистого рейтингу"
