--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -27,7 +27,7 @@
     },
 
     "advantages": {
-      "customers": "Our <1>happy</1> customers",
+      "customers": "Our <1>{{counter}}</1> happy customers",
       "habitDrive": "Habit drive",
       "viewStatistic": "View statistics",
       "personalSetting": "Personal rate setting"
