add translation i18next

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -53,5 +53,19 @@
     "password": "Password",
     "placeholderPassword": "Enter your password",
     "placeholderRepeatPassword": "Repeat password"
+  },
+
+  "waterForm": {
+    "titleEdit": "Correct entered data",
+    "titleAdd": "Choose a value",
+    "secondTitle": "Amount of water",
+    "time": "Recording time",
+    "waterUsed": "Enter the value of the water used",
+    "button": "Save"
+  },
+
+  "waterModal": {
+    "edit": "Edit the entered amount of water",
+    "add": "Add water"
   }
 }
