--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -63,8 +63,8 @@
     "edit": "Edit water entry",
     "delete": "Delete water entry",
 
-    "ml": "ml"
-     "l": "L"
+    "ml": "ml",
+    "l": "L"
   },
 
   "waterForm": {
@@ -77,10 +77,6 @@
   },
 
   "waterModal": {
-    "edit": "Edit the entered amount of water",
-
-   
-   
-
+    "edit": "Edit the entered amount of water"
   }
 }
