--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -77,6 +77,7 @@
   },
 
   "waterModal": {
-    "edit": "Edit the entered amount of water"
+    "edit": "Edit the entered amount of water",
+    "add": "Add water"
   }
 }
