--- a/src/i18n/locales/uk/translation.json
+++ b/src/i18n/locales/uk/translation.json
@@ -11,7 +11,8 @@
     "tracker": "Твій трекер води",
     "forgot": "Відновлення пароля",
     "renew": "Оновлення пароля",
-    "error": "Помилка"
+    "error": "Помилка",
+    "resetPwd": ""
   },
 
   "logo": {
