Change visibility of language switcher
Change visibility of language switcher

Co-Authored-By: Tretiak-Anna <151523272+Tretiak-Anna@users.noreply.github.com>

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -1,6 +1,8 @@
 {
   "lang": {
-    "choose": "Choose Language"
+    "choose": "Choose Language",
+    "select": "Select language",
+    "language": "English"
   },
 
   "pages": {
