--- a/src/i18n/locales/uk/translation.json
+++ b/src/i18n/locales/uk/translation.json
@@ -1,6 +1,8 @@
 {
   "lang": {
-    "choose": "Виберіть Мову"
+    "choose": "Виберіть Мову",
+    "select": "Виберіть Мову",
+    "language": "Українська"
   },
 
   "pages": {
