--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -79,5 +79,29 @@
   "waterModal": {
     "edit": "Edit the entered amount of water",
     "add": "Add water"
+  },
+
+  "settingsModal": {
+    "titleModal": "Setting"
+  },
+  "settingsForm": {
+    "userPhotoAlt": "User photo",
+    "userUploadButton": "Upload a photo",
+    "userGender": "Your gender identity",
+    "genderWoman": "Woman",
+    "genderMan": "Man",
+    "userNameLabel": "Your name",
+    "userNamePlaceholder": "Nadia",
+    "userEmailLabel": "Email",
+    "subtitle": "My daily norma",
+    "textForWoman": "For woman:",
+    "textForMan": "For man:",
+    "textDescription": "V is the volume of the water norm in liters per day, M is your body weight, T is the time of active sports, or another type of activity commensurate in terms of loads (in the absence of these, you must set 0)",
+    "textActiveTime": "Active time in hours",
+    "userWeight": "Your weight in kilograms:",
+    "userTime": "The time of active participation in sports:",
+    "WaterAmount": " The required amount of water in liters per day:",
+    "labelWaterNorma": "Write down how much water you will drink:",
+    "subButton": "Save"
   }
 }
