create not found page and add localstorage to i18n

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -90,5 +90,12 @@
     "password": "Password",
     "placeholderPassword": "Enter your password",
     "placeholderRepeatPassword": "Repeat password"
+  },
+
+  "notFound": {
+    "title": "Oops!",
+    "info": "Looks like this page is not available.",
+    "advice": "Let’s get you back on track!",
+    "goBack": " Go to Home"
   }
 }
