--- a/src/i18n/locales/uk/translation.json
+++ b/src/i18n/locales/uk/translation.json
@@ -7,7 +7,7 @@
 
   "pages": {
     "home": "Трекер води",
-    "notfound": "Сторінку не знайдено",
+    "notFound": "Сторінку не знайдено",
     "signIn": "Вхід",
     "signUp": "Реєстрація",
     "tracker": "Твій трекер води",
@@ -91,5 +91,12 @@
     "password": "Пароль",
     "placeholderPassword": "Введіть пароль",
     "placeholderRepeatPassword": "Повторіть пароль"
+  },
+
+  "notFound": {
+    "title": "Ой!",
+    "info": "Схоже, ця сторінка недоступна.",
+    "advice": "Давайте повернемо вас на правильний шлях!",
+    "goBack": "Перейти на головну"
   }
 }
