--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -122,5 +122,18 @@
     "password": "Password",
     "placeholderPassword": "Enter your password",
     "placeholderRepeatPassword": "Repeat password"
+  },
+
+  "waterDailyNorma": {
+    "liters": "L",
+    "dailyNorma": "My daily norma"
+  },
+
+  "addWaterBtn": {
+    "addWater": "Add water"
+  },
+
+  "userPanel": {
+    "greeting": "Hello"
   }
 }
