--- a/src/i18n/locales/uk/translation.json
+++ b/src/i18n/locales/uk/translation.json
@@ -123,5 +123,18 @@
     "password": "Пароль",
     "placeholderPassword": "Введіть пароль",
     "placeholderRepeatPassword": "Повторіть пароль"
+  },
+
+  "waterDailyNorma": {
+    "liters": "Л",
+    "dailyNorma": "Щоденна норма"
+  },
+
+  "addWaterBtn": {
+    "addWater": "Додати води"
+  },
+
+  "userPanel": {
+    "greeting": "Привіт"
   }
 }
