removed and added

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -135,5 +135,10 @@
 
   "userPanel": {
     "greeting": "Hello"
+  },
+
+  "userBarPopover": {
+    "setting": "Setting",
+    "logout": "Log out"
   }
 }
