--- a/src/i18n/locales/uk/translation.json
+++ b/src/i18n/locales/uk/translation.json
@@ -136,5 +136,10 @@
 
   "userPanel": {
     "greeting": "Привіт"
+  },
+
+  "userBarPopover": {
+    "setting": "Налаштування",
+    "logout": "Вийти"
   }
 }
