Add open delete modal and translation of modal
Add open delete modal and translation of modal

Co-Authored-By: Eugene <150532404+AgentGarrus@users.noreply.github.com>

--- a/src/i18n/locales/uk/translation.json
+++ b/src/i18n/locales/uk/translation.json
@@ -95,6 +95,15 @@
     "titleModal": "Налаштування"
   },
 
+  "deleteModal": {
+    "title": "Видалити запис",
+    "confirm": "Ви впевнені, що хочете видалити запис?",
+    "delete": "Видалити",
+    "ariaDelete": "Підтвердити видалення",
+    "close": "Скасувати",
+    "ariaClose": "Скасувати видалення"
+  },
+
   "settingsForm": {
     "userPhotoAlt": "Фото користувача",
     "userUploadButton": "Завантажити фото",
