--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -94,6 +94,15 @@
     "titleModal": "Setting"
   },
 
+  "deleteModal": {
+    "title": "Delete entry",
+    "confirm": "Are you sure you want to delete the entry?",
+    "delete": "Delete",
+    "ariaDelete": "Confirm delete",
+    "close": "Cancel",
+    "ariaClose": "Cancel delete"
+  },
+
   "settingsForm": {
     "userPhotoAlt": "User photo",
     "userUploadButton": "Upload a photo",
