--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -103,6 +103,15 @@
     "ariaClose": "Cancel delete"
   },
 
+  "logoutModal": {
+    "outtitle": "Log Out",
+    "questionout": "Do you really want to leave?",
+    "outbtn": "Log Out",
+    "ariaConfirm": "Confirm logout",
+    "cancelbtn": "Cancel",
+    "ariaClose": "Cancel logout"
+  },
+
   "settingsForm": {
     "userPhotoAlt": "User photo",
     "userUploadButton": "Upload a photo",
