--- a/src/i18n/locales/uk/translation.json
+++ b/src/i18n/locales/uk/translation.json
@@ -96,12 +96,21 @@
   },
 
   "deleteModal": {
-    "title": "Видалити запис",
+    "title": "Видалення запису",
     "confirm": "Ви впевнені, що хочете видалити запис?",
     "delete": "Видалити",
     "ariaDelete": "Підтвердити видалення",
     "close": "Скасувати",
     "ariaClose": "Скасувати видалення"
+  },
+
+  "logoutModal": {
+    "outtitle": "Вихід з системи",
+    "questionout": "Ви дійсно хочете вийти за системи?",
+    "outbtn": "Вийти",
+    "ariaConfirm": "Підтвердити вихід",
+    "cancelbtn": "Скасувати",
+    "ariaClose": "Скасувати вихід"
   },
 
   "settingsForm": {
