--- a/src/i18n/locales/uk/translation.json
+++ b/src/i18n/locales/uk/translation.json
@@ -131,8 +131,7 @@
     "userTime": "Час активного заняття спортом:",
     "WaterAmount": " Необхідна кількість води в літрах на добу:",
     "labelWaterNorma": "Запишіть, скільки води ви будете пити:",
-    "subButton": "Зберегти",
-    "errorField": "Поле має бути заповнене"
+    "subButton": "Зберегти"
   },
 
   "resetPwd": {
