--- a/src/i18n/locales/uk/translation.json
+++ b/src/i18n/locales/uk/translation.json
@@ -95,6 +95,24 @@
     "titleModal": "Налаштування"
   },
 
+  "deleteModal": {
+    "title": "Видалити запис",
+    "confirm": "Ви впевнені, що хочете видалити запис?",
+    "delete": "Видалити",
+    "ariaDelete": "Підтвердити видалення",
+    "close": "Скасувати",
+    "ariaClose": "Скасувати видалення"
+  },
+
+  "logOutModal": {
+    "title": "Вихід",
+    "confirm": "Ви дійсно хочете вийти?",
+    "logOut": "Вийти",
+    "ariaLogOut": "Підтвердити вихід",
+    "close": "Скасувати",
+    "ariaClose": "Скасувати вихід"
+  },
+
   "settingsForm": {
     "userPhotoAlt": "Фото користувача",
     "userUploadButton": "Завантажити фото",
@@ -141,5 +159,29 @@
   "userBarPopover": {
     "setting": "Налаштування",
     "logout": "Вийти"
+  },
+
+  "calendar": {
+    "statistics": "Статистика",
+    "month": "Місяць",
+    "previousMonth": "попередній місяць",
+    "nextMonth": "наступний місяць",
+    "hideChart": "приховати діаграму",
+    "showChart": "показати діаграму"
+  },
+
+  "months": {
+    "January": "Січень",
+    "February": "Лютий",
+    "March": "Березень",
+    "April": "Квітень",
+    "May": "Травень",
+    "June": "Червень",
+    "July": "Липень",
+    "August": "Серпень",
+    "September": "Вересень",
+    "October": "Жовтень",
+    "November": "Листопад",
+    "December": "Грудень"
   }
 }
