--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -127,7 +127,7 @@
     "textDescription": "V is the volume of the water norm in liters per day, M is your body weight, T is the time of active sports, or another type of activity commensurate in terms of loads (in the absence of these, you must set 0)",
     "textActiveTime": "Active time in hours",
     "userWeight": "Your weight in kilograms:",
-    "userTime": "The time of active participation in sports:",
+    "userTime": "The time of active participation in sports (hours):",
     "WaterAmount": " The required amount of water in liters per day:",
     "labelWaterNorma": "Write down how much water you will drink (ml):",
     "subButton": "Save",
