--- a/src/i18n/locales/uk/translation.json
+++ b/src/i18n/locales/uk/translation.json
@@ -128,7 +128,7 @@
     "textDescription": "V - об'єм норми води в літрах на добу, M - маса вашого тіла, T - час активних занять спортом, або іншим видом діяльності, співмірним за навантаженнями (за їх відсутності ви необхідно встановити 0)",
     "textActiveTime": "Час активності в годинах",
     "userWeight": "Ваша вага в кілограмах:",
-    "userTime": "Час активного заняття спортом:",
+    "userTime": "Час активного заняття спортом (год):",
     "WaterAmount": " Необхідна кількість води в літрах на добу:",
     "labelWaterNorma": "Запишіть, скільки води ви будете пити (мл):",
     "subButton": "Зберегти",
